# DeskBooks

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PRIVACY.md  README.md  SECURITY.md  run.sh
backend/: pyproject.toml
backend/app/: analytics.py  app_paths.py  backups.py  bootstrap.py  budgets.py  db.py  docx_journal.py  main.py  models.py  onboarding.py  profiles.py  rules.py  schemas.py
backend/app/importers/: __init__.py  amex.py  amex_xlsx.py  base.py  chase_credit.py  contribution_history.py  fidelity_charitable.py  us_banks.py  wells_fargo_checking.py
backend/app/routers/: accounts.py  analytics.py  backups.py  budgets.py  categories.py  common.py  goals.py  imports.py  journal.py  profiles.py  rules.py  snapshots.py  transactions.py
backend/tests/: test_analytics_sankey.py  test_backups.py  test_budgets.py  test_duplicate_detection.py  test_importers.py  test_journal_import.py  test_no_external_network.py  test_onboarding_profiles.py
docs/: ARCHITECTURE.md  DEVELOPMENT.md  TODO.md
docs/screenshots/: README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  invalidate.ts  types.ts
frontend/src/components/: ChartColorControls.tsx  ChartLegend.tsx  DateRangeControls.tsx  ErrorBoundary.tsx  Field.tsx  Layout.tsx  SidePanel.tsx  TransactionsTable.tsx
frontend/src/lib/: chartColors.ts  fmt.ts  kinds.tsx  labels.ts
samples/: README.md  amex_sample.csv  chase_credit_sample.csv  wells_fargo_checking_sample.csv
(+10 files in other folders)
